# datathon-grupo-01

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  dvc.yaml  list_models.py  load_test.py  load_test_script.py  prometheus.yml  pyproject.toml  pytest.ini  requisito.md
.github/workflows/: ci.yml
dags/: drift_monitoring_dag.py  mlops_dag.py
data/golden_set/: golden_set.json  latest_eval_predictions.json
data/processed/: feature_store.parquet
data/processed/faiss_index/: index.faiss  index.pkl
docs/: ARCHITECTURE.md  CODE_REVIEW_REPORT.md  LGPD_PLAN.md  MODEL_CARD.md  OWASP_MAPPING.md  RED_TEAM_REPORT.md  SYSTEM_CARD.md
evaluation/: llm_judge.py  ragas_eval.py
grafana/dashboards/: datathon_dashboard.json
grafana/provisioning/dashboards/: dashboard.yml
models/: challenger_metrics.json  champion_metrics.json  lstm_model.pth  lstm_model_challenger.pth  model_hyperparameters.json  scaler.joblib  scaler_challenger.joblib
monitoring/: drift.py
notebooks/: 01_eda.ipynb
security/: guardrails.py
src/: config.py  train.py
src/agent/: rag_pipeline.py  react_agent.py  tools.py
src/data/: data_loader.py  generate_synthetic.py
src/features/: feature_store.py
src/models/: predict.py  train.py
src/serving/: app.py  schemas.py
tests/: test_agent.py  test_api.py  test_data_loader.py  test_generate_synthetic.py  test_guardrails.py  test_models.py  test_predict.py  test_rag_pipeline.py  test_tools.py  test_train_pipeline.py
