[tool.poetry]
name = "datathon-grupo-01"
version = "0.1.0"
description = "Tech Challenge Fase 5 - MLOps e LLMs"
authors = ["Grupo 01"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "0.111.0"
uvicorn = "0.29.0"
yfinance = ">=0.2.54"
pandas = "2.2.2"
pyarrow = "15.0.2"
numpy = "1.26.4"
scikit-learn = "1.4.2"
torch = "2.2.2"
mlflow = "2.12.1"
prometheus-fastapi-instrumentator = "7.0.0"
prometheus-client = "0.20.0"
pydantic = "2.7.1"
joblib = "1.4.2"
matplotlib = "3.8.4"
langchain = "0.2.0"
langchain-community = "0.2.0"
langchain-google-genai = "1.0.6"
langfuse = "2.53.8"
ragas = "0.1.7"
datasets = "2.19.1"
faiss-cpu = "1.8.0"
pypdf = "4.2.0"
pytest = "8.2.0"
httpx = "0.27.0"
pytest-cov = "5.0.0"
apache-airflow = "2.9.1"
psycopg2-binary = "2.9.9"
dvc = "3.50.1"
faker = "25.0.0"
evidently = ">=0.4.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"